--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,8 +1,7 @@
 <ion-content class="login-content" padding>
   <ion-row class="logo-row">
-    <ion-col></ion-col>
-    <ion-col width-67>
-      <img src="http://placehold.it/300x200"/>
+    <ion-col>
+    	<h2>Fit 2 Me</h2>
     </ion-col>
     <ion-col></ion-col>
   </ion-row>
