--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,9 +1,6 @@
 <ion-content class="login-content" padding>
   <ion-row class="logo-row">
-    <ion-col>
-    	<h2>Fit 2 Me</h2>
-    </ion-col>
-    <ion-col></ion-col>
+    <ion-col><h1>Fit 2 Me</h1></ion-col>
   </ion-row>
   <div class="login-box">
     <form (ngSubmit)="login()" #registerForm="ngForm">
