--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,8 +1,9 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar hideBackButton="true">
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
+    
     <ion-title>Home</ion-title>
   </ion-navbar>
 </ion-header>
@@ -11,8 +12,8 @@
   <h3>Ionic Menu Starter</h3>
 
   <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
+   Welcome {{user.name}}
   </p>
 
-  <button ion-button secondary menuToggle>Toggle Menu</button>
+  
 </ion-content>
