--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -24,12 +24,11 @@
 
     <br>
     <div>
-      <p>No account yet? <a (click)="goRegisterPage()">Create an account</a></p>
+      <p>Not registered yet? <a (click)="goRegisterPage()">Register</a></p>
     </div>
     <br>
 
   </form>
   <button ion-button full type="submit" class="facebook-button" (click)="tryFacebookLogin()">Facebook Login</button>
-  <button ion-button full type="submit" class="twitter-button" (click)="tryTwitterLogin()">Twitter Login</button>
   <button ion-button full type="submit" class="google-button"  (click)="tryGoogleLogin()">Google Login</button>
 </ion-content>
