--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -1,12 +1,17 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar swipeBackEnabled="false">
     <ion-title>Register</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding class="form-content">
+
   <form class="form" [formGroup]="registerForm" (ngSubmit)="tryRegister(registerForm.value)">
 
+    <ion-item>
+      <ion-label floating>Full Name</ion-label>
+      <ion-input type="text" formControlName="fullname"></ion-input>
+    </ion-item>
     <ion-item>
       <ion-label floating>Email</ion-label>
       <ion-input type="text" formControlName="email"></ion-input>
@@ -21,11 +26,10 @@
     <label class="success-message">{{successMessage}}</label>
     <br>
     <div>
-      <p>Already have an account? <a (click)="goLoginPage()">Try to Log in</a></p>
+      <p>Already registered? <a (click)="goLoginPage()">Try to Log in</a></p>
     </div>
     <br>
   </form>
   <button ion-button block type="submit" class="facebook-button" (click)="tryFacebookLogin()">Register with Facebook</button>
-  <button ion-button block type="submit" class="twitter-button" (click)="tryTwitterLogin()">Register with Twitter</button>
   <button ion-button block type="submit" class="google-button"  (click)="tryGoogleLogin()">Register with Google</button>
 </ion-content>
