Retrieving healthDetails from firebase to profile page (test)

--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -19,6 +19,8 @@
 	<!--Health details section. -->
 	<h3>Health Details</h3>
 
+	<!--<p>{{userHealthDetails.age}}</p>-->
+
 	<ion-item>
 		<ion-label>Weight</ion-label>
     	<ion-input type="number" placeholder="kg"></ion-input>
