--- a/src/pages/onboarding/onboarding.html
+++ b/src/pages/onboarding/onboarding.html
@@ -6,38 +6,35 @@
 
 </ion-header>
 
-
 <ion-content padding>
 
-	<ion-slides pager=true>
-		
+	<ion-slides #mySlider pager=false>
 		<ion-slide>
-			<h3>Set Workout Preferences</h3>
-
-			<p>These will be use to help tailor your workouts.</p>
-
-			<ion-item>
-			  <ion-label>Workout types</ion-label>
-			  <ion-select multiple="true" [(ngModel)]="workoutTypes">
-			    <ion-option value="1">Cardio</ion-option>
-			    <ion-option value="2">Weights</ion-option>
-			  </ion-select>
-			</ion-item>
-			<ion-item>
-			  <ion-label>Workout Location</ion-label>
-			  <ion-select multiple="true" [(ngModel)]="workoutLocation">
-			    <ion-option value="1">Home</ion-option>
-			    <ion-option value="2">Gym</ion-option>
-			  </ion-select>
-			</ion-item>
-			<ion-item>
+				<h3>Set Workout Preferences</h3>
+				<p>These will be use to help tailor your workouts.</p>
+				<ion-item>
+				  <ion-label>Workout types</ion-label>
+				  <ion-select required multiple="true" [(ngModel)]="workoutTypes">
+				    <ion-option value="cardio">Cardio</ion-option>
+				    <ion-option value="weights">Weights</ion-option>
+				  </ion-select>
+				</ion-item>
+				<ion-item>
+				  <ion-label>Workout Location</ion-label>
+				  <ion-select required multiple="true" [(ngModel)]="workoutLocation">
+				    <ion-option value="home">Home</ion-option>
+				    <ion-option value="gym">Gym</ion-option>
+				  </ion-select>
+				</ion-item>
+				<ion-item>
 					<ion-label>Fitness level</ion-label>
-				<ion-select multiple="false" [(ngModel)]="workoutLevel">
-					<ion-option value="1">Beginner</ion-option>
-					<ion-option value="2">Intermediate</ion-option>
-					<ion-option value="3">Advanced</ion-option>
-				</ion-select>
-			</ion-item>
+					<ion-select required multiple="false" [(ngModel)]="workoutLevel">
+						<ion-option value="beginner">Beginner</ion-option>
+						<ion-option value="intermediate">Intermediate</ion-option>
+						<ion-option value="advanced">Advanced</ion-option>
+					</ion-select>
+				</ion-item>
+				<button [disabled]="!workoutLevel || !workoutLocation || !workoutTypes" ion-button (click)="nextSlide()">Next</button>
 		</ion-slide>
 
 		<ion-slide>
@@ -45,20 +42,20 @@
 			<p>These details will be used to calculate your body mass index (BMI) and basal metabolic rate (BMR). Don't worry - we'll explain this more later.
 			<ion-item>
 				<ion-label>Weight</ion-label>
-    			<ion-input type="number" placeholder="kg"></ion-input>
+    			<ion-input [(ngModel)]="weight" type="number" placeholder="kg"></ion-input>
   			</ion-item>
 			<ion-item>
 				<ion-label>Height</ion-label>
-    			<ion-input type="number" placeholder="cm"></ion-input>
+    			<ion-input [(ngModel)]="height" type="number" placeholder="cm"></ion-input>
   			</ion-item>
   			<ion-item>
 				<ion-label>Age</ion-label>
-    			<ion-input type="number" placeholder="years"></ion-input>
+    			<ion-input [(ngModel)]="age" type="number" placeholder="years"></ion-input>
   			</ion-item>
 
   			<ion-item>
 					<ion-label>Activity level</ion-label>
-				<ion-select multiple="false" [(ngModel)]="workoutLevel">
+				<ion-select multiple="false" [(ngModel)]="activityLevel">
 					<ion-option value="1.2"> Sedentary</ion-option>
 					<ion-option value="1.375"> Lightly active (light exercise/sports 1-3 days/week)</ion-option>
 					<ion-option value="1.55">Moderately active</ion-option>
@@ -66,7 +63,7 @@
 					<ion-option value="1.9">Extra active</ion-option>
 				</ion-select>
 			</ion-item>
-
+			<button [disabled]="!weight || !height || !age || !activityLevel" ion-button (click)="nextSlide()">Next</button>
 		</ion-slide>
 
 		<ion-slide>
@@ -80,23 +77,18 @@
  			<ion-item>
  				<ion-label>Frequency</ion-label>
  				<ion-select multiple="false" [(ngModel)]="reminderFrequency">
- 					<ion-option value="1">Every day</ion-option>
- 					<ion-option value="2">Every weekday</ion-option>
- 					<ion-option value="3">Once a week</ion-option>
+ 					<ion-option value="every-day">Every day</ion-option>
+ 					<ion-option value="every-weekday">Every weekday</ion-option>
+ 					<ion-option value="once-a-week">Once a week</ion-option>
  				</ion-select>
-
  			</ion-item>
 
  			<ion-item>
 			  <ion-label>Time</ion-label>
-			  <ion-datetime displayFormat="hh:mm" [(ngModel)]="myDate"></ion-datetime>
+			  <ion-datetime displayFormat="HH:mm" [(ngModel)]="reminderTime"></ion-datetime>
 			</ion-item>
+			<button ion-button (click)="onboardingDone()">Finish setup</button>
 
-		</ion-slide>
-
-		<ion-slide>
-			<h3>Ready to start your fitness journey?</h3>
-				<button ion-button (click)="onboardingDone()">Lets go</button>
 		</ion-slide>
 
 	</ion-slides>
