--- a/src/pages/update-health-details/update-health-details.html
+++ b/src/pages/update-health-details/update-health-details.html
@@ -26,7 +26,7 @@
 
   			<ion-item>
 					<ion-label>Activity level</ion-label>
-				<ion-select multiple="false" [(ngModel)]="activityLevel">
+				<ion-select multiple="false" (ngModel)="activityLevel">
 					<ion-option value="Sedentary - 1.2"> Sedentary</ion-option>
 					<ion-option value="Lightly active - 1.375">Lightly active (light exercise/sports 1-3 days/week)</ion-option>
 					<ion-option value="Moderately active - 1.55">Moderately active</ion-option>
