Updating preferences from the profile page

--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -32,7 +32,7 @@
 	<p class='displayItem'><label>Type(s): </label> {{userWorkoutDetail.type}}</p>
 	<p class='displayItem'><label>Location: </label> {{userWorkoutDetail.location}}</p>
 	<p class='displayItem'><label>Fitness Level: </label> {{userWorkoutDetail.fitnessLevel}}</p>
-
+	<p class='displayItem'><label>Day(s) of Workout: </label> {{userWorkoutDetail.dayOfWorkout}}</p>
 
 	<button ion-button (click)="updateWorkoutPreferences()">Update Workout Preferences</button>
 
