--- a/src/pages/update-health-details/update-health-details.html
+++ b/src/pages/update-health-details/update-health-details.html
@@ -25,8 +25,8 @@
   			</ion-item>
 
   			<ion-item>
-					<ion-label>Activity level</ion-label>
-				<ion-select multiple="false" (ngModel)="activityLevel">
+				<ion-label>Activity level</ion-label>
+				<ion-select (ngModel)="activityLevel">
 					<ion-option value="Sedentary - 1.2"> Sedentary</ion-option>
 					<ion-option value="Lightly active - 1.375">Lightly active (light exercise/sports 1-3 days/week)</ion-option>
 					<ion-option value="Moderately active - 1.55">Moderately active</ion-option>
@@ -34,6 +34,6 @@
 					<ion-option value="Extra Active - 1.9">Extra active</ion-option>
 				</ion-select>
 			</ion-item>
-			<button [disabled]="!weight || !height || !age || !activityLevel" ion-button (click)="update()">Update</button>
+			<button [disabled]="!weight || !height || !age" ion-button (click)="changeDetails(age, weight, height)">Update</button>
 
 </ion-content>
