--- a/src/pages/update-reminder-details/update-reminder-details.html
+++ b/src/pages/update-reminder-details/update-reminder-details.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>updateReminderDetails</ion-title>
+    <ion-title>Update Reminder Details</ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -35,7 +35,7 @@
 			  <ion-label>Time</ion-label>
 			  <ion-datetime displayFormat="HH:mm" [(ngModel)]="reminderTime"></ion-datetime>
 			</ion-item>
-			<button ion-button (click)="onboardingDone()">Finish setup</button>
+			<button ion-button (click)="update(remindersEnabled, reminderFrequency, reminderTime)">Update</button>
 
 
 </ion-content>
