Starting user updates.

--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -14,7 +14,7 @@
 		<p class='displayItem'><label>Name: </label>{{user.name}}</p>
     	<p class='displayItem'><label>Email: </label>{{user.email}}</p>
 
-	<button ion-button>Update Your Details</button>
+	<button ion-button (click)="updateUserDetails()">Update Your Details</button>
 
 	<!--Health details section. -->
 	<h3>Health Details</h3>
