--- a/src/pages/update-workout-details/update-workout-details.html
+++ b/src/pages/update-workout-details/update-workout-details.html
@@ -1,7 +1,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>updateWorkoutDetails</ion-title>
+    <ion-title>Update Workout Details</ion-title>
   </ion-navbar>
 
 </ion-header>
