Sample dashboard layout for home page.

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -10,11 +10,139 @@
 <ion-content padding>
   <h3>Ionic Menu Starter</h3>
   
-
-
-
   <p>
-   Welcome {{user.name}}
+  {{user.name}}'s Dashboard
   </p>
+
+  <div class="wrapper">
+      <section class="blue">
+         <h2>Angular</h2>
+         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            Pellentesque nisl mi, mollis aliquet auctor eu, sodales et quam.
+            Vivamus fringilla ex at erat interdum euismod.
+            Vivamus posuere, leo lobortis fermentum tempor, tellus justo laoreet
+            lectus, ac feugiat nisi augue ac velit. Integer eget rhoncus leo.</p>
+
+         <p>Integer a porttitor turpis. Pellentesque habitant morbi tristique senectus
+            et netus et malesuada fames ac turpis egestas. Orci varius natoque
+            penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nunc et
+            diam quam. In consectetur ante tellus, vitae auctor tortor consequat et.
+            Pellentesque laoreet lacus nec felis rhoncus molestie eget ut nulla.</p>
+      </section>
+
+      <section class="red">
+         <h2>TypeScript</h2>
+         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque nisl
+            mi, mollis aliquet auctor eu, sodales et quam. Vivamus fringilla ex at erat
+            interdum euismod.
+            Vivamus posuere, leo lobortis fermentum tempor, tellus justo laoreet lectus,
+            ac feugiat nisi augue ac velit. Integer eget rhoncus leo.</p>
+      </section>
+
+      <section class="yellow">
+         <h2>Sass</h2>
+         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque nisl
+            mi, mollis aliquet auctor eu, sodales et quam.</p>
+      </section>
+
+      <section class="green">
+         <h2>HTML5</h2>
+         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque nisl mi, mollis aliquet auctor eu, sodales et quam. Vivamus fringilla ex at erat interdum euismod.</p>
+      </section>
+
+      <section class="orange">
+         <h2>Web Components</h2>
+
+         <p>Integer a porttitor turpis. Pellentesque habitant morbi tristique senectus
+            et netus et malesuada fames ac turpis egestas. Orci varius natoque penatibus
+            et magnis dis parturient montes, nascetur ridiculus mus. Nunc et diam quam.
+            In consectetur ante tellus, vitae auctor tortor consequat et. Pellentesque
+            laoreet lacus nec felis rhoncus molestie eget ut nulla.</p>
+      </section>
+
+      <section class="purple">
+         <h2>Ionic Native</h2>
+
+         <p>Integer a porttitor turpis. Pellentesque habitant morbi tristique senectus
+            et netus et malesuada fames ac turpis egestas. Orci varius natoque penatibus
+            et magnis dis parturient montes, nascetur ridiculus mus. Nunc et diam quam.
+         </p>
+      </section>
+
+      <section class="violet">
+         <h2>Apache Cordova</h2>
+
+         <p>Integer a porttitor turpis. Pellentesque habitant morbi tristique senectus
+            et netus et malesuada fames ac turpis egestas. Orci varius natoque
+            penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nunc et
+            diam quam. In consectetur ante tellus, vitae auctor tortor consequat et.
+            Pellentesque laoreet lacus nec felis rhoncus molestie eget ut nulla.</p>
+      </section>
+
+      <section class="blue">
+         <h2>MongoDB</h2>
+      </section>
+
+      <section class="red">
+         <h2>Firebase</h2>
+
+         <p>Pellentesque laoreet lacus nec felis rhoncus
+        molestie eget ut nulla.</p>
+      </section>
+
+      <section class="yellow">
+         <h2>PHP</h2>
+
+         <p>Nunc et diam quam. In consectetur ante tellus, vitae auctor tortor
+            consequat et. Pellentesque laoreet lacus nec felis rhoncus molestie eget
+            ut nulla.</p>
+      </section>
+
+      <section class="green">
+         <h2>MySQL</h2>
+      </section>
+
+      <section class="orange">
+         <h2>CSS3</h2>
+      </section>
+
+      <section class="purple">
+         <h2>iOS</h2>
+      </section>
+
+      <section class="violet">
+         <h2>Android</h2>
+      </section>
+
+      <section class="blue">
+         <h2>Windows</h2>
+      </section>
+
+      <section class="red">
+         <h2>Google Chrome</h2>
+
+         <p>Integer a porttitor turpis. Pellentesque habitant morbi tristique senectus
+            et netus et malesuada fames ac turpis egestas. Orci varius natoque
+            penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nunc et
+            diam quam.</p>
+      </section>
+
+      <section class="yellow">
+         <h2>Firefox</h2>
+      </section>
+
+      <section class="green">
+         <h2>Safari</h2>
+      </section>
+
+      <section class="orange">
+         <h2>Opera</h2>
+      </section>
+
+      <section class="purple">
+         <h2>Internet Explorer</h2>
+      </section>
+   </div>
+
 
 </ion-content>
