--- a/src/pages/exercise-list/exercise-list.html
+++ b/src/pages/exercise-list/exercise-list.html
@@ -44,9 +44,9 @@
 </ion-item>
 
 	<ion-item>
-		<button ion-button>Apply Filter</button>
+		<button ion-button (click)="applyFilter()">Apply Filter</button>
 
-		<button ion-button>Clear Filter</button>
+		<button ion-button (click)="clearFilter()">Clear Filter</button>
 	</ion-item>
 
   	<ion-list inset>
