--- a/src/pages/exercise-list/exercise-list.html
+++ b/src/pages/exercise-list/exercise-list.html
@@ -15,8 +15,7 @@
 
 <ion-item>
   <ion-label>Exercise Type</ion-label>
-  <ion-select  multiple="true" [(ngModel)]="exType">
-    <ion-option value="all">All</ion-option>
+  <ion-select  multiple="false" [(ngModel)]="exType">
     <ion-option value="10">Abs</ion-option>
     <ion-option value="8">Arms</ion-option>
     <ion-option value="12">Back</ion-option>
@@ -29,8 +28,7 @@
 
 <ion-item>
   <ion-label>Equipment</ion-label>
-  <ion-select  multiple="true" [(ngModel)]="exEquipment">
-    <ion-option value="7">None</ion-option>
+  <ion-select  multiple="false" [(ngModel)]="exEquipment">
     <ion-option value="4">Gym mat</ion-option>
     <ion-option value="1">Barbell</ion-option>
     <ion-option value="8">Bench</ion-option>
