--- a/src/pages/exercise-detail/exercise-detail.html
+++ b/src/pages/exercise-detail/exercise-detail.html
@@ -1,9 +1,3 @@
-<!--
-  Generated template for the ExerciseDetailPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
@@ -16,9 +10,32 @@
 <ion-content padding>
 
 	<h2>{{ex.name}}</h2>
-	<p>{{ex.description}}</p>
+	<h5>Description:</h5>
+    <p>{{ex.description}}</p>
 
-	<p>{{ex.category.id}}</p>
-	<img src={{exerciseImageString}}>
+
+	<h5>Category:</h5> 
+	<p>{{ex.category.name}}</p>
+
+	<h5>Muscles worked:</h5> 
+	<ul *ngFor="let m of muscles">
+		<li>{{m.name}}</li>
+    </ul>
+
+	<h6>Secondary muscles worked:</h6>
+
+	<ul *ngFor="let m of second_muscles">
+		<li>{{sm.name}}</li>
+	</ul>
+
+	<h6>Equipment:</h6>
+
+	<ul *ngFor="let e of equipment">
+		<li>{{e.name}}</li>
+	</ul>
+
+	<div *ngFor="let img of exerciseImageData">
+		<img src={{img.image}}>
+	</div>	
 	
 </ion-content>
