Pushing all exercises for all workouts to array

--- a/src/pages/workout-plan/workout-plan.html
+++ b/src/pages/workout-plan/workout-plan.html
@@ -19,6 +19,11 @@
 
 	<h5>This week's workout</h5>
 
-	<p>{{days}}</p>
+	<!---->
+	<ul *ngFor="let e of exercisesNamesInWorkout">
+		<li>{{e.name}}</li>
+    </ul>
+
+
 
 </ion-content>
