--- a/src/pages/workouts/workouts.html
+++ b/src/pages/workouts/workouts.html
@@ -1,18 +1,19 @@
-<!--
-  Generated template for the WorkoutsPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
-    <ion-title>workouts</ion-title>
+    <ion-title>Workouts</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
+
+    	<ion-list inset>
+    		<ion-item *ngFor="let workout of workoutNames">
+		    	<h2>{{workout.description}}</h2>
+      			<button item-right (click)="viewMoreDetail(w)">More</button>
+    		</ion-item>
+  		</ion-list>
 
 </ion-content>
