--- a/src/pages/workouts/workouts.html
+++ b/src/pages/workouts/workouts.html
@@ -10,9 +10,9 @@
 <ion-content padding>
 
     	<ion-list inset>
-    		<ion-item *ngFor="let workout of workoutNames">
-		    	<h2>{{workout.description}}</h2>
-      			<button item-right (click)="viewMoreDetail(workout)">More</button>
+    		<ion-item *ngFor="let w of workoutNames">
+		    	<h2>{{w.comment}}</h2>
+      			<button ion-button item-right (click)="viewMoreDetail(w)">View</button>
     		</ion-item>
   		</ion-list>
 
