--- a/src/pages/workout-start/workout-start.html
+++ b/src/pages/workout-start/workout-start.html
@@ -1,13 +1,7 @@
-<!--
-  Generated template for the WorkoutStartPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
-    <ion-title>workout-start</ion-title>
+    <ion-title>Workout</ion-title>
   </ion-navbar>
 
 </ion-header>
