--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -13,7 +13,7 @@
   <h4>Hi {{user.name}}</h4>
   
   <div class="wrapper">
-      <section class="green">
+      <section class="purple">
          <h2>BMI</h2>
          <h6>Body Mass Index</h6>
          <p><b>Weight:</b> {{userHealthDetail.weight}}</p>
@@ -25,32 +25,29 @@
          For more information on BMI you can visit the <a href="https://www.nhs.uk/live-well/healthy-weight/bmi-calculator/">NHS BMI site</a>.
       </section>
 
-      <section class="red">
+
+      <section class="yellow">
+         <h2>Current Level</h2>
+         <h4>Workout Superstar</h4>
+         <p>You have completed 78 workouts!</p>
+      </section>
+
+      <section class="green">
          <h2>BMR</h2>
          
       </section>
-
-      <section class="yellow">
-         <h2>Stars & Badges</h2>
-         <p></p>
+ 
+      <section class="blue">
+         <h2>BMR</h2>
       </section>
 
-
-      <section class="purple">
-         <h2>5</h2>
-      </section>
-
-      <section class="violet">
+      <section class="red">
          <h2></h2>
 
          <p></p>
       </section>
-
-      <section class="blue">
-         <h2>7</h2>
-      </section>
-
-      <section class="red">
+      
+      <section class="orange">
          <h2></h2>
 
          <p></p>
