Saving basic workout detail to firebase, needs moved to end of workout slider.

--- a/src/pages/workout-detail/workout-detail.html
+++ b/src/pages/workout-detail/workout-detail.html
@@ -24,7 +24,7 @@
 		 </ion-list>
 
 
- 	<button ion-button id='start' class="circleBtn" (click)="startWorkout(workoutId)" >Start Workout</button>
+ 	<button ion-button id='start' class="circleBtn" (click)="startWorkout(workoutId, workoutName)" >Start Workout</button>
  	<button ion-button id='log' class="circleBtn" (click)="logWorkout(detail)">Log Workout</button>
  	
  	<p><b>Top Tip:</b> You can press log workout if you have completed this without your phone already and want this workout to be recorded!</p>
