History pulling back

--- a/src/pages/workout-start/workout-start.html
+++ b/src/pages/workout-start/workout-start.html
@@ -37,6 +37,7 @@
 	    	<h6>Workout Complete!</h6>
 	    	<p>Great job, you did brilliant completing your workout. We're proud of you and you should be of yourself. Keep the awesome work up</p>
 	    	<p>Fit2Me</p>
+	    	<button ion-button (click)="goToHistory()">Workout History</button>
 	    </ion-slide>
 
 	  
