Pulling back historic workout data, includign count of workouts, last workout and then also all workouts (name + date)

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -5,6 +5,9 @@
 </ion-header>
 
 <ion-content padding class="form-content">
+
+  <img id='logoImg' alt="logo" src="../../assets/imgs/LogoNoTaglineSmall.png" > 
+
   <form class="form" [formGroup]="loginForm" (ngSubmit)="tryLogin(loginForm.value)">
 
     <ion-item>
