--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -6,6 +6,9 @@
 
 <ion-content padding class="form-content">
 
+  <img id='logoImg' alt="logo" src="../../assets/imgs/LogoNoTaglineSmall.png" > 
+
+
   <form class="form" [formGroup]="registerForm" (ngSubmit)="tryRegister(registerForm.value)">
 
     <ion-item>
