--- a/src/pages/workout-history/workout-history.html
+++ b/src/pages/workout-history/workout-history.html
@@ -9,10 +9,18 @@
 
 <ion-content padding>
 
-  <ion-list inset>
-    <ion-item *ngFor="let w of workoutName">
-      <h2>{{w.name}} {{w.date}}</h2>   
-    </ion-item>
-  </ion-list>
+ <h3>Your Statistics</h3>
+
+ <p id='displayItem'><b>Total Workouts:</b> {{workoutStats.countOfWorkout}}</p>
+ <p id='displayItem'><b>Date of Last Workout:</b> {{workoutStats.lastWorkoutDay}}</p>
+
+ <h3>Your Workout History</h3>
+
+  <div *ngFor="let w of workoutName">
+  	<p id='displayItem'>
+  		<b>Date:</b> {{w.date}} <br/>
+  		<b>Workout:</b> {{w.name}}
+  	</p>
+  </div>
 
 </ion-content>
