Showing workout summary on dashboard

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -27,14 +27,14 @@
 
 
       <section class="yellow">
-         <h2>Current Level</h2>
-         <h4>Workout Superstar</h4>
-         <p>You have completed 78 workouts!</p>
+        
       </section>
 
       <section class="green">
-         <h2>BMR</h2>
-         
+         <h2>Workout Summary</h2>
+         <p>You have completed {{workoutStats.countOfWorkout}} workouts in total!</p>
+         <p>Your last workout was on {{workoutStats.lastWorkoutDay}}</p>
+         <p>This workout was {{workoutStats.lastWorkoutName}}</p>
       </section>
  
       <section class="blue">
