Filtering workouts based on user preferences

--- a/src/pages/onboarding/onboarding.html
+++ b/src/pages/onboarding/onboarding.html
@@ -16,7 +16,7 @@
 				  <ion-label>Workout types</ion-label>
 				  <ion-select required multiple="true" [(ngModel)]="workoutTypes">
 				    <ion-option value="Cardio">Cardio</ion-option>
-				    <ion-option value="Weights">Weights</ion-option>
+				    <ion-option value="Strength">Strength</ion-option>
 				  </ion-select>
 				</ion-item>
 				<ion-item>
