--- a/src/pages/update-workout-details/update-workout-details.html
+++ b/src/pages/update-workout-details/update-workout-details.html
@@ -16,7 +16,7 @@
 				  <ion-label>Workout types</ion-label>
 				  <ion-select required multiple="true" [(ngModel)]="workoutTypes">
 				    <ion-option value="Cardio">Cardio</ion-option>
-				    <ion-option value="Weights">Weights</ion-option>
+				    <ion-option value="Strength">Strength</ion-option>
 				  </ion-select>
 				</ion-item>
 				<ion-item>
