--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -6,9 +6,10 @@
 
 <ion-content padding class="form-content">
 
-  <img id='logoImg' alt="logo" src="../../assets/imgs/LogoNoTaglineSmall.png" > 
-
-
+  <!--<img id='logoImg' alt="logo" src="../../assets/imgs/LogoNoTaglineSmall.png" > -->
+  <h3>Fit2Me</h3>
+  <h4>Workout your way</h4>
+  
   <form class="form" [formGroup]="registerForm" (ngSubmit)="tryRegister(registerForm.value)">
 
     <ion-item>
