Input of goals, and storage to firebase complete.
WIll work on the pulling of these into the view next.

--- a/src/pages/register-disclaimer/register-disclaimer.html
+++ b/src/pages/register-disclaimer/register-disclaimer.html
@@ -6,7 +6,7 @@
 
 <ion-content padding>
 
-	<h5>Please read the following before completed registration.</h5>
+	<h5>Please read the following before completing registration.</h5>
 
 	<h6>Health & Wellbeing</h6>
 
