--- a/src/pages/goals/goals.html
+++ b/src/pages/goals/goals.html
@@ -9,45 +9,121 @@
 
 <ion-content padding>
 
-<button ion-button (click)="setGoal()">Add Goal</button>
+<h2 class='center'>Goals in progress</h2>
 
-<h2>Active Goals</h2>
+<button class='center' ion-button (click)="setGoal()">Add New Goal</button>
 
-  <h4>Weight Goals</h4>
 
-  <div class='activeTile' *ngFor="let x of weightGoalData">
-	
-	<p>Name: {{x.name}}</p>
-  	<p>Goal Weight: <b>{{x.weightTarget}}</b></p>
-  	<p>Date Added: {{x.dateAdded}}</p>
-  	<p>Target Completion Date: {{x.targetDate}}</p>
-  	<button ion-button>View detail</button>
+  <div *ngFor="let x of weightGoalData">
+
+  <ion-card class='active'>
+      <ion-card-header>{{x.name}}</ion-card-header>
+      <ion-card-content>
+        <p><b>Goal Weight:</b> {{x.weightTarget}}</p>
+        <p><b>Current Weight:</b> {{userHealthDetail.weight}}</p>
+
+        <p><b>Date Added:</b> {{x.dateAdded}}</p>
+        <p><b>Target Completion Date:</b> {{x.targetDate}}</p>
+
+        <button ion-button (click)="markWeightGoalComplete(x.directPath)">Mark complete</button>
+        <button ion-button (click)="deleteWeightGoal(x.directPath)">Delete goal</button>
+        <br/>
+        <span class='tag' id='tagActive'>Weight Goal</span>
+      </ion-card-content>
+    </ion-card>
 
   </div>
 
-  <h4>Workout Goals</h4>
-
-  <div class='activeTile' *ngFor="let y of workoutGoalData">
+  <div *ngFor="let x of workoutGoalData">
   	
-	<p>Name: {{y.name}}</p>
-  	<p>Complete <b>{{y.workoutTarget}}</b> workouts</p>
-  	<p>Date Added: {{y.dateAdded}}</p>
-  	<p>Target Completion Date: {{y.targetDate}}</p>
-  	<button ion-button>View detail</button>
+  <ion-card class='active'>
+    <ion-card-header>{{x.name}}</ion-card-header>
+    <ion-card-content>
+    	<p>Complete <b>{{x.workoutTarget}}</b> workouts</p>
+      <p><b>Status:</b> {{workoutStats.countOfWorkout}} / {{x.workoutTarget}} complete</p>
+
+    	<p><b>Date Added:</b> {{x.dateAdded}}</p>
+    	<p><b>Target Completion Date:</b> {{x.targetDate}}</p>
+
+      <button ion-button (click)="markWorkoutGoalComplete(x.directPath)">Mark complete</button>
+      <button ion-button (click)="deleteWorkoutGoal(x.directPath)">Delete goal</button>
+      <br/>
+      <span class='tag' id='tagActive'>Workout Goal</span>
+    </ion-card-content>
+  </ion-card>
 
   </div>
 
+  <div *ngFor="let x of otherGoalData">
+  <ion-card class='active'>
+    <ion-card-header>{{x.name}}</ion-card-header>
+    <ion-card-content>
+      <p><b>Description:</b> {{x.otherTarget}}</p>
+      <p><b>Date Added:</b> {{x.dateAdded}}</p>
+      <p><b>Target Completion Date:</b> {{x.targetDate}} </p>
 
-  <h4>Other Goals</h4>
+      <button ion-button (click)="markOtherGoalComplete(x.directPath)">Mark complete</button>
+      <button ion-button (click)="deleteOtherGoal(x.directPath)">Delete goal</button>
+      <br/>
+      <span class='tag' id='tagActive'>Other Goal</span>
+    </ion-card-content>
+  </ion-card>
 
-  <div class='activeTile' *ngFor="let x of otherGoalData">
-	<p>Name: {{x.name}}</p>
-  	<p>Complete <b>{{x.otherTarget}}</b> workouts</p>
-  	<p>Date Added: {{x.dateAdded}}</p>
-  	<p>Target Completion Date: {{x.targetDate}}  <button ion-button item-right>Mark complete</button></p>
-  	
   </div>
 
-  <h2>Completed Goals</h2>
+  <h2 class='center'>Completed Goals</h2>
+
+  <!--COMPLETED GO DOWN HERE AT BOTTOM-->
+
+  <!--Weight goals-->
+
+  <div *ngFor="let x of weightGoalDataComplete">
+
+  <ion-card class='complete'>
+      <ion-card-header>{{x.name}}</ion-card-header>
+      <ion-card-content>
+        <p><b>Goal Weight:</b> {{x.weightTarget}}</p>
+        <p><b>Date Added:</b> {{x.dateAdded}}</p>
+        <p><b>Target Completion Date:</b> {{x.targetDate}}</p>
+        <br/>
+        <span class='tag' id='tagInactive'>Weight Goal</span>
+      </ion-card-content>
+    </ion-card>
+
+  </div>
+
+  <!--Workout goals-->
+
+  <div *ngFor='let x of workoutGoalDataComplete'>
+    <ion-card class='complete'>
+      <ion-card-header>{{x.name}}</ion-card-header>
+      <ion-card-content>
+        <p>Complete <b>{{x.workoutTarget}}</b> workouts</p>
+        <p><b>Date Added:</b> {{x.dateAdded}}</p>
+        <p><b>Target Completion Date:</b> {{x.targetDate}}</p>
+        <br/>
+        <span class='tag' id='tagInactive'>Workout Goal</span>
+
+      </ion-card-content>
+    </ion-card>
+  </div>
+
+  <!--Other goals-->
+
+  <div *ngFor="let x of otherGoalDataComplete">
+    
+  <ion-card class='complete'>
+    <ion-card-header>{{x.name}}</ion-card-header>
+    <ion-card-content>
+      <p><b>Description:</b> {{x.otherTarget}}</p>
+      <p><b>Date Added:</b> {{x.dateAdded}}</p>
+      <p><b>Target Completion Date:</b> {{x.targetDate}}</p>
+      <br/>
+      <span class='tag' id='tagInactive'>Other Goal</span>
+    </ion-card-content>
+  </ion-card>
+
+  </div>
+
 
 </ion-content>
