--- a/src/pages/add-goal/add-goal.html
+++ b/src/pages/add-goal/add-goal.html
@@ -34,13 +34,13 @@
 	</ion-item>
 
 	<ion-item  *ngIf='otherGoals'>
-		<ion-label>Other goal (description)</ion-label>
-		<ion-input [(ngModel)]="gtOtherVal" placeholder='Enter your goal description' type='text'></ion-input>
+		<ion-label>Description</ion-label>
+		<ion-input [(ngModel)]="gtOtherVal" placeholder='Goal description' type='text'></ion-input>
 	</ion-item>
 
 	<ion-item>
   		<ion-label>Date</ion-label>
-  		<ion-datetime [(ngModel)]='targetDate' placeholder='Enter the date you would like to achieve goal by' display-format="DDD MMM YYYY"></ion-datetime>
+  		<ion-datetime [(ngModel)]='targetDate' placeholder='Target date to achieve by' display-format="DDD MMM YYYY"></ion-datetime>
 	</ion-item>
 
 	<br/>
