--- a/src/pages/goals/goals.html
+++ b/src/pages/goals/goals.html
@@ -17,11 +17,13 @@
   <div *ngFor="let x of weightGoalData">
 
   <ion-card class='active'>
-      <ion-card-header>{{x.name}}</ion-card-header>
+      <ion-card-header>
+        <ion-card-subtitle>{{x.name}}</ion-card-subtitle>
+       <ion-card-title>Reach target weight {{x.weightTarget}}</ion-card-title>
+     </ion-card-header>
       <ion-card-content>
-        <p><b>Goal Weight:</b> {{x.weightTarget}}</p>
-        <p><b>Current Weight:</b> {{userHealthDetail.weight}}</p>
 
+        <p><b>Current Weight:</b> {{userHealthDetail.weight}}</p>
         <p><b>Date Added:</b> {{x.dateAdded}}</p>
         <p><b>Target Completion Date:</b> {{x.targetDate}}</p>
 
@@ -37,11 +39,13 @@
   <div *ngFor="let x of workoutGoalData">
   	
   <ion-card class='active'>
-    <ion-card-header>{{x.name}}</ion-card-header>
+    <ion-card-header>
+      <ion-card-subtitle>{{x.name}}</ion-card-subtitle>
+      <ion-card-title>Complete {{x.workoutTarget}} workouts</ion-card-title>
+    </ion-card-header>
     <ion-card-content>
-    	<p>Complete <b>{{x.workoutTarget}}</b> workouts</p>
-      <p><b>Status:</b> {{workoutStats.countOfWorkout}} / {{x.workoutTarget}} complete</p>
 
+      <p><b>Status:</b> {{workoutStats.countOfWorkout}} / {{x.workoutTarget}} complete</p>
     	<p><b>Date Added:</b> {{x.dateAdded}}</p>
     	<p><b>Target Completion Date:</b> {{x.targetDate}}</p>
 
@@ -56,9 +60,12 @@
 
   <div *ngFor="let x of otherGoalData">
   <ion-card class='active'>
-    <ion-card-header>{{x.name}}</ion-card-header>
+    <ion-card-header>
+      <ion-card-subtitle>{{x.name}}</ion-card-subtitle>
+     <ion-card-title>{{x.otherTarget}}</ion-card-title>
+    </ion-card-header>
     <ion-card-content>
-      <p><b>Description:</b> {{x.otherTarget}}</p>
+
       <p><b>Date Added:</b> {{x.dateAdded}}</p>
       <p><b>Target Completion Date:</b> {{x.targetDate}} </p>
 
@@ -80,11 +87,14 @@
   <div *ngFor="let x of weightGoalDataComplete">
 
   <ion-card class='complete'>
-      <ion-card-header>{{x.name}}</ion-card-header>
+      <ion-card-header>
+        <ion-card-subtitle>{{x.name}}</ion-card-subtitle>
+        <ion-card-title>Reach target weight {{x.weightTarget}}</ion-card-title>
+      </ion-card-header>
       <ion-card-content>
-        <p><b>Goal Weight:</b> {{x.weightTarget}}</p>
         <p><b>Date Added:</b> {{x.dateAdded}}</p>
         <p><b>Target Completion Date:</b> {{x.targetDate}}</p>
+        <p><b>Date achieved: </b>{{x.dateAchieved}}</p>
         <br/>
         <span class='tag' id='tagInactive'>Weight Goal</span>
       </ion-card-content>
@@ -96,11 +106,14 @@
 
   <div *ngFor='let x of workoutGoalDataComplete'>
     <ion-card class='complete'>
-      <ion-card-header>{{x.name}}</ion-card-header>
+      <ion-card-header>
+       <ion-card-subtitle>{{x.name}}</ion-card-subtitle>
+       <ion-card-title>Complete {{x.workoutTarget}} workouts</ion-card-title>
+      </ion-card-header>
       <ion-card-content>
-        <p>Complete <b>{{x.workoutTarget}}</b> workouts</p>
         <p><b>Date Added:</b> {{x.dateAdded}}</p>
         <p><b>Target Completion Date:</b> {{x.targetDate}}</p>
+        <p><b>Date achieved: </b>{{x.dateAchieved}}</p>
         <br/>
         <span class='tag' id='tagInactive'>Workout Goal</span>
 
@@ -113,11 +126,14 @@
   <div *ngFor="let x of otherGoalDataComplete">
     
   <ion-card class='complete'>
-    <ion-card-header>{{x.name}}</ion-card-header>
+    <ion-card-header>
+    <ion-card-subtitle>{{x.name}}</ion-card-subtitle>
+    <ion-card-title>{{x.otherTarget}}</ion-card-title>
+  </ion-card-header>
     <ion-card-content>
-      <p><b>Description:</b> {{x.otherTarget}}</p>
       <p><b>Date Added:</b> {{x.dateAdded}}</p>
       <p><b>Target Completion Date:</b> {{x.targetDate}}</p>
+      <p><b>Date achieved: </b>{{x.dateAchieved}}</p>
       <br/>
       <span class='tag' id='tagInactive'>Other Goal</span>
     </ion-card-content>
