Dates formatted in display and save in correct format to firebase.

--- a/src/pages/add-goal/add-goal.html
+++ b/src/pages/add-goal/add-goal.html
@@ -40,7 +40,7 @@
 
 	<ion-item>
   		<ion-label>Date</ion-label>
-  		<ion-datetime [(ngModel)]='targetDate' placeholder='Target date to achieve by' display-format="DDD MMM YYYY"></ion-datetime>
+  		<ion-datetime [(ngModel)]='targetDate' placeholder='Target date to achieve by'></ion-datetime>
 	</ion-item>
 
 	<br/>
