--- a/src/pages/goals/goals.html
+++ b/src/pages/goals/goals.html
@@ -18,8 +18,8 @@
 
   <ion-card class='active'>
       <ion-card-header>
-        <ion-card-subtitle>{{x.name}}</ion-card-subtitle>
-       <ion-card-title>Reach target weight {{x.weightTarget}}</ion-card-title>
+        <ion-card-title>{{x.name}}</ion-card-title>
+       <ion-card-title>Reach target weight {{x.weightTarget}} kg</ion-card-title>
      </ion-card-header>
       <ion-card-content>
 
@@ -40,7 +40,7 @@
   	
   <ion-card class='active'>
     <ion-card-header>
-      <ion-card-subtitle>{{x.name}}</ion-card-subtitle>
+      <ion-card-title>{{x.name}}</ion-card-title>
       <ion-card-title>Complete {{x.workoutTarget}} workouts</ion-card-title>
     </ion-card-header>
     <ion-card-content>
@@ -61,7 +61,7 @@
   <div *ngFor="let x of otherGoalData">
   <ion-card class='active'>
     <ion-card-header>
-      <ion-card-subtitle>{{x.name}}</ion-card-subtitle>
+      <ion-card-title>{{x.name}}</ion-card-title>
      <ion-card-title>{{x.otherTarget}}</ion-card-title>
     </ion-card-header>
     <ion-card-content>
@@ -88,7 +88,7 @@
 
   <ion-card class='complete'>
       <ion-card-header>
-        <ion-card-subtitle>{{x.name}}</ion-card-subtitle>
+        <ion-card-title>{{x.name}}</ion-card-title>
         <ion-card-title>Reach target weight {{x.weightTarget}}</ion-card-title>
       </ion-card-header>
       <ion-card-content>
@@ -107,7 +107,7 @@
   <div *ngFor='let x of workoutGoalDataComplete'>
     <ion-card class='complete'>
       <ion-card-header>
-       <ion-card-subtitle>{{x.name}}</ion-card-subtitle>
+       <ion-card-title>{{x.name}}</ion-card-title>
        <ion-card-title>Complete {{x.workoutTarget}} workouts</ion-card-title>
       </ion-card-header>
       <ion-card-content>
@@ -127,7 +127,7 @@
     
   <ion-card class='complete'>
     <ion-card-header>
-    <ion-card-subtitle>{{x.name}}</ion-card-subtitle>
+    <ion-card-title>{{x.name}}</ion-card-title>
     <ion-card-title>{{x.otherTarget}}</ion-card-title>
   </ion-card-header>
     <ion-card-content>
