Workouts auto completing if reached. Alerts also presenting.

--- a/src/pages/add-goal/add-goal.html
+++ b/src/pages/add-goal/add-goal.html
@@ -14,7 +14,7 @@
 			<ion-select required multiple="false" placeholder='Select your goal type' [(ngModel)]="goalType" (ionChange)='showHideFurtherGoalInput(goalType)'>
 			<ion-option value="gtAmountOfWorkouts">Target amount of workouts</ion-option>
 			<ion-option value="gtWeight">Weight goal</ion-option>
-			<ion-option value='gtOther'>Other</ion-option>
+			<ion-option value='gtOther'>Custom goal</ion-option>
 			</ion-select>
 	</ion-item>
 
