--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -11,12 +11,12 @@
   <h3>Welcome {{user.name}}</h3>
 
   <ion-card>
-    <ion-card-header>
-        Workouts Complete
-    </ion-card-header>
-    <ion-card-content>
-    <canvas #doughnutCanvas></canvas>
-    </ion-card-content>
+      <ion-card-header>
+        Weight shown over time
+      </ion-card-header>
+      <ion-card-content>
+        <canvas #lineCanvas></canvas>
+      </ion-card-content>
   </ion-card>
 
   <ion-card>
