--- a/src/pages/workout-plan/workout-plan.html
+++ b/src/pages/workout-plan/workout-plan.html
@@ -8,12 +8,14 @@
 
 <ion-content padding>
 
-	<h5>Your preferences</h5>
-	<div class='displayItem'>
-		<p><label>Type(s): </label> {{userWorkoutDetail.type}}</p>
-		<p><label>Location: </label> {{userWorkoutDetail.location}}</p>
-		<p><label>Day(s) of Workout: </label> {{userWorkoutDetail.dayOfWorkout}}</p>
-	</div>
+	<ion-card class='cardTop'>
+		<ion-card-title>Your Preferences</ion-card-title>
+		<ion-card-content>
+			<p><label>Type(s): </label> {{userWorkoutDetail.type}}</p>
+			<p><label>Location: </label> {{userWorkoutDetail.location}}</p>
+			<p><label>Day(s) of Workout: </label> {{userWorkoutDetail.dayOfWorkout}}</p>
+		</ion-card-content>
+	</ion-card>
 
 	<button ion-button (click)="getProfilePage()">Update preferences</button>
 
@@ -23,6 +25,8 @@
 	<div>
 	<ion-list inset>
     	<ion-item *ngFor="let w of preferredWorkoutsName">
+
+
 	    	<h2>{{w.comment}}</h2>
      		<button ion-button item-right (click)="viewMoreDetail(w)">View</button>
     	</ion-item>
